[package]
name = "lb_clmm"
version = "0.8.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lb_clmm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
alpha-access = []
test-bpf = []
staging = []

[dependencies]
uint = {workspace = true}
bytemuck.workspace = true
ruint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
solana-program = "2.3.0"
num_enum.workspace = true
borsh.workspace = true

[dev-dependencies]
proptest = "1.2.0"
rand = "0.7.3"
solana-program-test.workspace = true
solana-sdk = "2.3.0"
async-trait = "0.1.52"
assert_matches = "1.5.0"
